--- a/main1.ui
+++ b/main1.ui
@@ -260,11 +260,11 @@
        </font>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="tabWidgetPage1">
        <attribute name="title">
-        <string>잔고</string>
+        <string>매매</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout">
         <item row="0" column="0">
@@ -299,6 +299,28 @@
              <layout class="QVBoxLayout" name="verticalLayout_2">
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_5">
+                <property name="spacing">
+                 <number>6</number>
+                </property>
+                <item>
+                 <widget class="QLabel" name="label_2">
+                  <property name="minimumSize">
+                   <size>
+                    <width>80</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>80</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
                 <item>
                  <widget class="QLabel" name="label_buy">
                   <property name="minimumSize">
@@ -328,7 +350,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QRadioButton" name="radioButton_limit">
+                 <widget class="QComboBox" name="comboBox_2">
                   <property name="minimumSize">
                    <size>
                     <width>60</width>
@@ -341,50 +363,21 @@
                     <height>30</height>
                    </size>
                   </property>
-                  <property name="text">
-                   <string>지정가</string>
-                  </property>
-                  <property name="checked">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QRadioButton" name="radioButton_cur">
-                  <property name="minimumSize">
-                   <size>
-                    <width>60</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>60</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="text">
-                   <string>시장가</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QRadioButton" name="radioButton_reserve">
-                  <property name="minimumSize">
-                   <size>
-                    <width>60</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>60</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="text">
-                   <string>예약</string>
-                  </property>
+                  <item>
+                   <property name="text">
+                    <string>지정가</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>시장가</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>예약</string>
+                   </property>
+                  </item>
                  </widget>
                 </item>
                </layout>
@@ -392,7 +385,7 @@
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_6">
                 <property name="spacing">
-                 <number>0</number>
+                 <number>6</number>
                 </property>
                 <item>
                  <widget class="QLabel" name="label_4">
@@ -468,7 +461,7 @@
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_8">
                 <property name="spacing">
-                 <number>0</number>
+                 <number>6</number>
                 </property>
                 <item>
                  <widget class="QLabel" name="label_7">
@@ -556,7 +549,7 @@
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_10">
                 <property name="spacing">
-                 <number>0</number>
+                 <number>6</number>
                 </property>
                 <item>
                  <widget class="QLabel" name="label_9">
@@ -718,6 +711,28 @@
              <layout class="QVBoxLayout" name="verticalLayout_3">
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_22">
+                <property name="spacing">
+                 <number>6</number>
+                </property>
+                <item>
+                 <widget class="QLabel" name="label_3">
+                  <property name="minimumSize">
+                   <size>
+                    <width>80</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>80</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
                 <item>
                  <widget class="QLabel" name="label_sell">
                   <property name="minimumSize">
@@ -747,7 +762,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QRadioButton" name="radioButton_slimit">
+                 <widget class="QComboBox" name="comboBox_3">
                   <property name="minimumSize">
                    <size>
                     <width>60</width>
@@ -760,50 +775,21 @@
                     <height>30</height>
                    </size>
                   </property>
-                  <property name="text">
-                   <string>지정가</string>
-                  </property>
-                  <property name="checked">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QRadioButton" name="radioButton_scur">
-                  <property name="minimumSize">
-                   <size>
-                    <width>60</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>60</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="text">
-                   <string>시장가</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QRadioButton" name="radioButton_sreserve">
-                  <property name="minimumSize">
-                   <size>
-                    <width>60</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>60</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="text">
-                   <string>예약</string>
-                  </property>
+                  <item>
+                   <property name="text">
+                    <string>지정가</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>시장가</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>예약</string>
+                   </property>
+                  </item>
                  </widget>
                 </item>
                </layout>
@@ -811,7 +797,7 @@
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_18">
                 <property name="spacing">
-                 <number>0</number>
+                 <number>6</number>
                 </property>
                 <item>
                  <widget class="QLabel" name="label_25">
@@ -867,7 +853,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QComboBox" name="comboBox_sellratio_1">
+                 <widget class="QComboBox" name="comboBox_sellAratio">
                   <property name="minimumSize">
                    <size>
                     <width>60</width>
@@ -887,7 +873,7 @@
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_17">
                 <property name="spacing">
-                 <number>0</number>
+                 <number>6</number>
                 </property>
                 <item>
                  <widget class="QLabel" name="label_23">
@@ -943,7 +929,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QComboBox" name="comboBox_sellratio">
+                 <widget class="QComboBox" name="comboBox_sellPratio">
                   <property name="minimumSize">
                    <size>
                     <width>60</width>
@@ -972,7 +958,7 @@
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_15">
                 <property name="spacing">
-                 <number>0</number>
+                 <number>6</number>
                 </property>
                 <item>
                  <widget class="QLabel" name="label_19">
@@ -1296,7 +1282,7 @@
              </font>
             </property>
             <attribute name="horizontalHeaderVisible">
-             <bool>true</bool>
+             <bool>false</bool>
             </attribute>
             <attribute name="horizontalHeaderCascadingSectionResizes">
              <bool>true</bool>
@@ -2196,6 +2182,60 @@
             </layout>
            </item>
           </layout>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tab_2">
+       <attribute name="title">
+        <string>잔고현황</string>
+       </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_7">
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout_chart"/>
+        </item>
+        <item>
+         <widget class="QTableWidget" name="tableWidget_balance">
+          <property name="minimumSize">
+           <size>
+            <width>570</width>
+            <height>150</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>570</width>
+            <height>150</height>
+           </size>
+          </property>
+          <attribute name="verticalHeaderVisible">
+           <bool>false</bool>
+          </attribute>
+          <column>
+           <property name="text">
+            <string>마켓</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>매수가</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>잔고</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>현재가</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>수익율</string>
+           </property>
+          </column>
          </widget>
         </item>
        </layout>
