수정함:        aicoin_main.py 	수정함:        main1.ui

--- a/main1.ui
+++ b/main1.ui
@@ -444,7 +444,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QComboBox" name="comboBox_buyAratio">
+                 <widget class="QLabel" name="label_5">
                   <property name="minimumSize">
                    <size>
                     <width>60</width>
@@ -456,6 +456,9 @@
                     <width>60</width>
                     <height>30</height>
                    </size>
+                  </property>
+                  <property name="text">
+                   <string/>
                   </property>
                  </widget>
                 </item>
