--- a/main1.ui
+++ b/main1.ui
@@ -444,7 +444,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QLabel" name="label_5">
+                 <widget class="QComboBox" name="comboBox_buyAratio">
                   <property name="minimumSize">
                    <size>
                     <width>60</width>
@@ -456,9 +456,6 @@
                     <width>60</width>
                     <height>30</height>
                    </size>
-                  </property>
-                  <property name="text">
-                   <string/>
                   </property>
                  </widget>
                 </item>
